- add module-info.java to all projects - configure build.gradle to compile java 9 modules - problems:     * currently works only with java 9+ (TODO: restore java 8 compatibility)     * tests pass in IntelliJ but fail in gradle due to https://github.com/gradle/gradle/issues/4981